FindBugs cleeanup